// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`showHelp prints help for missing scripts 1`] = `
"npx run [2m[run-args] [node-args][22m <[32mscript[39m|[34mpattern[39m> [srcipt-args] ...

Examples:
  npx run
  npx run [32mclean[39m [32mbuild[39m
  npx run [32mconfig[39m --env='testing' [32mbuild[39m [32mdeploy[39m
  npx run [34mlint:*[39m
  npx run --inspect-brk [32mjest[39m

'default' script:
  When runnign without any arguemtns npx run will run the
  'default' script if it has been defined.

run-args:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

node-args:
  Any args before the first script are sent to npx as node args.
  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts
  ...

[31mno scripts discoverd[39m

You can add scripts using:

  ./package.json   - using npm run-scripts
  ./scripts module - exporting a single default object working
                     the same as the package.json run-scripts.
  ./scripts/*.js   - using any loadable nodejs module which is run
                     as a script given its basename

./scripts/*.js modules will override scripts of the same name defined in
the ./scripts module.
Scripts defined in the ./scripts module will override scripts of the same
name defined in ./package.json.

"
`;

exports[`showHelp prints help with list of scripts 1`] = `
"npx run [2m[run-args] [node-args][22m <[32mscript[39m|[34mpattern[39m> [srcipt-args] ...

Examples:
  npx run
  npx run [32mclean[39m [32mbuild[39m
  npx run [32mconfig[39m --env='testing' [32mbuild[39m [32mdeploy[39m
  npx run [34mlint:*[39m
  npx run --inspect-brk [32mjest[39m

'default' script:
  When runnign without any arguemtns npx run will run the
  'default' script if it has been defined.

run-args:
  --help         Show this help.
  --dry-run      List scripts to be run, but don't run them.

node-args:
  Any args before the first script are sent to npx as node args.
  --inspect      Run node with --inspect to debug scripts.
  --inspect-brk  Run node with --inspect-brk to debug scripts
  ...

scripts:
  [32mtest[39m  echo \\"Works on my machine!\\"
"
`;
